	* Bugfix: Added more tags to the badHtmlTags list to make sure they are escaped and not rendered (ex: embed)
	* Bugfix: Parsing dates in british english format failed (was interpreted as american)
	* Bugfix: List of available locales contained default locale twice
	* Bugfix: Timerange date selector had to high z-index
	* Bugfix: Detect also links in this format: "mailto:name@domain.com"
	* Changed: Padding of inline filter forms to prevent layout problems
	* Changed: Only set curl option CURLOPT_FOLLOWLOCATION when safe mode is not enabled
	* Changed: Minimum php version is 5.2.3 (instead only 5.2.0)
	* Changed: Updated highcharts library to 2.1.6
	* Changed: Updated tinyMCE to 3.4.3.2
	* Changed: <a>-tags are now removed from RTE when saving (autolink function rebuilds them when necessary for output)


core 2.1.0 - 2011-06-17
	1. Note: Since release 2.1.0, the todoyu extension repository is enabling us to decouple version updates of the todoyu core and basic extensions from one another.
	Respectively, the core and extensions changelogs are now maintained separately.
	2. Upgrade instruction: When upgrading an existing todoyu installation to 2.1.0 please read the instructions in the file __UPGRADE_TODOYU___READ_THIS_FIRST.txt
	which you'll find in the todoyu root folder.

	* Feature: Added TodoyuMail objects which handles mail sending. Extendable by extensions
	* Feature: Added auto-growing behavior textareas and RTE areas
	* Feature: Added authentification with tokens to allow public data access interfacing
	* Feature: Changed popup behaviour. Multiple popups are handled correct now. Close with escape
	* Feature: Added method for creation of random named cache folders to TodoyuFileManager
	* Feature: Extended TodoyuFileManager::getFolderContents with option to retrieve file stats
	* Feature: Live validation of date/datetime fields
	* Feature: Added Todoyu::db()->setDeleted() wrapper method