@@ -6,6 +6,7 @@ core 2.1.1 - ???
 	* Bugfix: List of available locales contained default locale twice
 	* Bugfix: Timerange date selector had to high z-index
 	* Bugfix: Detect also links in this format: "mailto:name@domain.com"
+	* Bugfix: Archive manager creates now valid zip archives on windows (valid extraction on linux)
 	* Changed: Padding of inline filter forms to prevent layout problems
 	* Changed: Only set curl option CURLOPT_FOLLOWLOCATION when safe mode is not enabled
 	* Changed: Minimum php version is 5.2.3 (instead only 5.2.0)
